# C2-App-161

./: .env.example  AI20K244_VoiceRide_Project_Package.md  README.md  WORKLOG.md  pyproject.toml  requirements.txt
.codex/: hooks.json
docs/: brief.md  github-setup.md  prd.md  wireframe.md
scripts/: log_hook.py
src/: config.py  main.py
src/api/: routes.py
src/models/: schemas.py
