[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceride"
version = "0.1.0"
description = "V-VoiceRide: Vietnamese voice-first ride booking assistant MVP"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",

    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.2.0,<1.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
    "openai>=1.55.0,<2.0.0",

    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
